[package]
name = "tomato-tmux-widget"
version = "0.1.0"
authors = ["Stuck_Overflow <stuckoverflow2021@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json= "1.0"
simple_logger = "1.11"
structopt = "0.3"
