[package]
name = "twitch-tmux-widget"
version = "0.0.1"
authors = ["stuck_overflow"]
edition = "2018"

[dependencies]
futures = "0.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
simple_logger = "1.11"
structopt = "0.3"
surf = "2.2"
toml = "0.4"
twitch_api2 = { version = "0.5.0-alpha", features = ["allow_unknown_fields", "client", "helix", "surf_client"] }
twitch_oauth2 = { version = "0.5.0-alpha", features = ["surf_client"] }
